style.css
/*
 Theme Name:     Pegasus Child
 Theme URI:      http://visionquestdevelopment.com
 Description:    Pegasus Child Theme
 Author:         Jim O'Brien
 Author URI:     http://visionquestdevelopment.com
 Template:       pegasus
 Version:        0.0.1
*/

/*@import url("../pegasus/style.css");*/

@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=EB+Garamond:ital,wght@0,400;0,600;1,400&family=Lora:wght@700&display=swap');

  :root {
    --wpadmin-bar-height: 32px;
    --ulg-brand-bar-height: 40px;
    --site-header-height: 0px;

    --global-offset-height: calc(
      var(--ulg-brand-bar-height) +
      var(--site-header-height)
    );

    --global-offset-height-with-admin: calc(
      var(--wpadmin-bar-height) +
      var(--ulg-brand-bar-height) +
      var(--site-header-height)
    );
  }

  .menu-heading {
    font-family: "Cinzel", serif;
    letter-spacing: 0.02em;
  }

  .menu-item, h1, h2, h3, h4, h5 {
    font-family: "Cinzel", serif;
  }

  .menu-body, p, span {
    font-family: "EB Garamond", serif;
  }

  .menu-tagline {
    font-family: "EB Garamond", serif;
    font-style: italic;
  }

  .vqmenu-itemname {
    font-family: "Cinzel", serif;
    letter-spacing: 0.02em;
    font-weight: bold;
  }

  .menu-item {
    font-family: "Cinzel", serif;
  }

  .vqmenu-itemdesc {
    font-family: "EB Garamond", serif;
  }

  #vqmenuTabContent .menu-tagline {
    font-family: "EB Garamond", serif;
    font-style: italic;
  }

  .pegasus-header-content {
    background: rgba(255, 255, 255, 0.8);
    padding: 3rem 1rem !important;
    max-width: 500px !important;
    color: black;
  }
  @media only screen and (max-width: 768px) {
    .pegasus-header-content {
      max-width: 250px !important;
    }
  }

	.inner-content {
		background: white;
		padding: 20px;
		margin-top: 1rem;
	}

.saltcellar-wave-col {
	display: flex;
	align-items: center;
	justify-content: center;
}

.saltcellar-wave-col img {
  vertical-align: middle;
}




	.ulg-gradient-heading
	{
		font-size: 5rem;
		font-weight: 700;
		margin-bottom: 1rem;
		text-transform: lowercase;
		letter-spacing: 0.02em;

		/* Gradient text */
		background: linear-gradient(
			90deg,
			#4D0D13 0%,
			#AF2A24 25%,
			#F25D3B 50%,
			#F89F3C 75%,
			#F7D580 100%
		);
		-webkit-background-clip: text !important;
		background-clip: text !important;
		color: transparent !important;
		text-transform: uppercase;
	}

  .nocomments { display: none !important; }



  body.admin-bar .large-header.large-header-has-slider .sy-box {
    margin: 0 !important;
    height: calc(100vh - var(--global-offset-height-with-admin));
  }

  .large-header.large-header-has-slider .sy-box {
    margin: 0 !important;
    height: calc(100vh - var(--global-offset-height));
  }

  .large-header.large-header-has-slider .sy-pager {
    position: absolute;
    bottom: 10px;
    z-index: 99;
    margin: 0 !important;
  }

  .large-header.large-header-has-slider img { width: 100%; }

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~OCTANE CUSTOM CSS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
  #logo {
		width: 330px;
	  }

		.ulg-brand-bar {
			background: #0F172A;
      height: 42px;
		}



	.ulg-brand-logo-img {
		width: 200px;
    height: auto;
    background: white;
    padding: 5px 7px;
    border-radius: 5px;
	}

		.ulg-brand-bar a {
			text-decoration: none;
		}

		.ulg-brand-bar a:hover {
			text-decoration: underline;
		}

		.brandbar-nav a::after {
		  content: "|";
		  color: white;
		  /*margin-left: 10px; Adjusts space between text and pipe */
      padding: 0 5px;
		}

		.brandbar-nav a:last-child::after {
		  content: "";
		  color: white;

		}

		.ulg-brand-bar .dropdown {
			background: white;
			border-radius: 8px;
			padding: 0 7px;
		}

	.ulg-dropdown-logo {
		max-height: 24px;
		width: auto;
		display: inline-block;
	}

	@media (max-width: 767px) {
		.ulg-brand-logo {
			display: none;
		}
	}

		.ulg-brand-bar .dropdown-toggle::after {
			color: black !important;
		}

		#ulgDropdown {
			padding: 2px !important;
			margin-bottom: 0 !important;

		}


	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~ HEADER ~~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/
	#logo {
		margin-top: 3rem;
		margin-bottom: 3rem;
	}

	#header {
		background: white;

		background-image: url(https://images.getbento.com/accounts/415b6c14ebfac54073234e04f7977c09/media/images/46451nav-pattern-seamless.jpg);
	}

	@media (min-width: 769px) {
		.site-header-desktop {
			margin: 0rem 0 0rem 1rem;
			border-left: 2px solid #141414;
			border-right: 2px solid #141414;
		}
	}

	.header-hr {
		border: 2px solid black;
		opacity: 0.9;
	}

	.theloft-address {
		text-align: center;
		color: black;
		text-decoration: none;
	}

	.theloft-address a {
		color: black;
		text-decoration: none;
	}

	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~ NAVIGATION ~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/
	.sidebar-nav .navi-btn a i {
	  background: #4a6682;
	}

	.nav-sidebar-widget ul {
		padding: 1.5rem 0;
		flex-direction: column;
	}

	/* NAV LINKS */
	.nav-sidebar-widget ul li a {
		text-align: left !important;
		text-transform: uppercase;
		color: #222;
		font-weight: 600;

		text-decoration: none;
	}

	.nav-sidebar-widget ul li a:hover {
		background: #4a6682;
		color: #222;
	}

	.nav-sidebar-widget ul li a.active,
	.nav-sidebar-widget ul li.current-menu-item a
	{
		color: #92712A !important;
	}

	.nav-sidebar-widget ul li a.active:hover {
		color: black !important;
	}

	.btn-brand {
		font-family: "Aclonica" !important;
		color: #F1EBE1 !important;
		background-color: #4a6682 !important;
		border-color: #4a6682 !important;
		text-transform: uppercase!important;
		width: 100%;
		text-align: center !important;
		font-weight: bold !important;
		    padding: 8px 20px !important;
	}

	.btn-brand:hover {
		background-color: black !important;
	}
/* ... */

